--- a/README.Rmd
+++ b/README.Rmd
@@ -136,7 +136,7 @@ snowM <- do.call("cbind", lapply(1:length(dates), function(x) {
 }))
   
 snowRaw <- list(crds = coordinates(snowR)[rInd,], dates = dates, snow = snowM)
-save(snowRaw, file = "results/snowRaw_4km_2004_2020.RData")
+# save(snowRaw, file = "results/snowRaw_4km_2004_2020.RData")
 ```
 
 ```{r, include=FALSE}
@@ -192,8 +192,8 @@ curveIntersect <- function(curve1, curve2, empirical=TRUE, domain=NULL) {
 
 7. Fit asymmetric gaussian model and extract date of 1/3 snow (model prediction intersects falls below 66.66) free per pixel and year. In addition dates will be extracted when the pixel was snow free for the first time in each year and the first date when the pixel remained snow free for at least 60 days.
 
-```{r snow7}
-smM <- do.call("rbind", parallel::mclapply(1:nrow(snowRaw$crds), function(j) {
+```{r snow7, eval = FALSE}
+smM <- abind::abind(parallel::mclapply(1:nrow(snowRaw$crds), function(j) {
 
   ## only interested in snow free land vs. snow covered land (different years have different values e.g. 4 or 165 for snow free)
   y <- ifelse(snowRaw$snow[j,]%in%c(4,165), 4, ifelse(snowRaw$snow[j,]%in%c(3,164), 3, snowRaw$snow[j,]))
@@ -233,25 +233,34 @@ smM <- do.call("rbind", parallel::mclapply(1:nrow(snowRaw$crds), function(j) {
 
     }))
 
-    matrix(unlist(c(merge(data.frame(year = 2004:2020), sm1, all.x = T)[,-1])), ncol = 3)
+    array(unlist(c(merge(data.frame(year = 2004:2020), sm1, all.x = T)[,-1])), dim = c(1,length(2004:2020),3))
 
   } else {
-    matrix(NA, nrow = length(2004:2020), ncol = 3)
+    array(dim = c(1,length(2004:2020),3))
   }
 
-}, mc.cores = parallel::detectCores()-1))
+}, mc.cores = parallel::detectCores()-1), along = 1)
 
 snow <- list(crds = snowRaw$crds, smM = smM)
-save(snow, file = "results/snowMelt_4km.RData")
+# save(snow, file = "results/snowMelt_4km.RData")
 ```
 
 ```{r, include = FALSE}
 load("results/snowMelt_4km.RData")
 ```
 
+
+```{r}
+
+
+
+plot(snow$smM[,2], snow$smM[,3])
+
+
+```
+
+
 ### Noise-removed NDVI from NOAA STAR
-
-
 
 
 
