--- a/README.Rmd
+++ b/README.Rmd
@@ -251,11 +251,31 @@ load("results/snowMelt_4km.RData")
 
 
 ```{r}
+crds <- rgdal:::project(snow$crds, prj, inv = T)
+ind  <- matrix(c(crds[,2]<90, crds[,2]>64, crds[,2]<=64), nrow = 3)
+
+snowTrend <- lapply(1:3, function(l)
+  apply(snow$smM[ind[l,],which(2004:2020>=2008),l], 2, function(x) {
+    quantile(x, probs = c(0.025, 0.5, 0.975), na.rm = T)
+  }))
+
+snowStats <- lapply(1:3, function(l) {
+  tmp <- data.frame(year = rep(2008:2020, each = sum(ind[l,])), 
+                    snow = c(snow$smM[ind[l,],which(2004:2020>=2008),l]),
+                    cell = rep(which(ind[l,]), length(2008:2020)))
+  
+  
+  
+  })
 
 
 
-plot(snow$smM[,2], snow$smM[,3])
 
+plot(2008:2020, comb[1,], type = "n", ylim = range(comb), xlab = "", ylab = "Date (doy)", las = 1)
+polygon(c(2008:2020, 2020:2008), c(combS[1,], rev(combS[3,])), col = "grey80", border = NA)
+lines(2008:2020, combS[2,], col = 1, lwd = 3)
+lines(2008:2020, freeS[2,], col = 1, lwd = 2, lty = 2)
+lines(2008:2020, firstS[2,], col = 1, lwd = 2, lty = 3)
 
 ```
 
